k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rps-game
  labels:
    name: rps-game
    app: rps-betting-game
